@@ -11,6 +11,10 @@ Version 2.2
 -----------
 (in development)
 
+- Added lexers:
+
+  * AMPL
+
 - Added `lexers.find_lexer_class_by_name()` (#1203)
 
 
